# langchain101

./: .gitignore  Home.py  README.md  pyproject.toml
langchain101/: ChefDesenrolado.py
notebooks/: Langchain101.ipynb
