[tool.poetry]
name = "langchain101"
version = "0.1.0"
description = ""
authors = ["vsuguimoto <vinisuguimoto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.128"
streamlit = "^1.20.0"
openai = "^0.27.2"
ipykernel = "^6.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
